--- a/index.html
+++ b/index.html
@@ -131,7 +131,26 @@
                 <li>Undertaking a materials management project, archiving 75+ year-old university and external documents for historical preservation and compliance with records management.</li>
                 <li>Responsible for contributing and managing proprietary lead and customer data in the university’s customer relations management software for department effectiveness.</li>
             </ul>
-            <!-- Add more experience if needed -->
+
+            <img src="tresi-logo.jpg" alt="Tresi LLC." class="company-logo">
+            <h3>Supply Chain/ Business Operations Intern</h3>
+            <p>Tresi LLC., New York, NY, USA</p>
+            <p>06/2023 – 08/2023</p>
+            <ul>
+                <li>Utilized Tableau and Salesforce for a 55% efficiency boost and enhanced KPI tracking. Reduced order issues by 40% through data-driven operational monitoring. Raised $50,000 via diverse fundraising efforts demonstrating adept networking skills.</li>
+                <li>Managed a team of 7 logistics professionals and 5 operational staff, implementing strategic planning to optimize workflow.</li>
+            </ul>
+
+            <img src="mphasis-logo.jpg" alt="Mphasis Ltd." class="company-logo">
+            <h3>Delivery Senior Software Engineer</h3>
+            <p>Mphasis Ltd., Mumbai, India</p>
+            <p>07/2018 – 07/2022</p>
+            <ul>
+                <li>Led strategic data analytics initiatives within supply chain ERP operations as part of the FedEx Critical Inventory Logistics Team, advising critical decision-making processes and ensuring project security. Travelled overseas for collaborative meetings.</li>
+                <li>Engineered innovative solutions to enhance the inventory system efficiency, resolving over 5000 support tickets through advanced SQL queries. Developed pricing strategies and created multiple reports for internal audit purposes.</li>
+                <li>Part of multiple dynamic teams to execute data quality improvements, and perform financial analysis by strategically assigning roles based on detailed individual strengths, resulting in a 40% reduction in software bugs and project delivery times.</li>
+                <li>Leveraged advanced SQL techniques for data analysis and optimization, architecting a 35% increase in project efficiency and code quality, showcasing not just technical proficiency but also a visionary approach to problem-solving and interface design.</li>
+            </ul>
         </section>
         <section id="education">
             <h2>Education</h2>
