--- a/index.html
+++ b/index.html
@@ -160,6 +160,14 @@
             <h3>Manipal Institute of Technology</h3>
             <p>BTech - Bachelor of Technology, Electrical, Electronics and Communications Engineering · (2014 - 2018)</p>
         </section>
+        <section>
+            <h2>Project</h2>
+            <img src="project1.jpg" alt="Project Logo" class="company-logo">
+            <p>Developed a Python-based arcade game utilizing Pygame library. Designed game mechanics, implemented player controls,
+                and managed game entities. Incorporated features such as shooting arrows, avoiding obstacles, and tracking scores
+                and lives.</p>
+            <a href="Game.py" download>Download Game</a>
+        </section>
         <!-- Add more sections if needed -->
     </div>
 </body>
