--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <h2>Contact</h2>
             <p>Mobile: 551-227-5645</p>
             <p>Email: skhanna5@stevens.edu</p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/shashankkhanna">Shashank Khanna</a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/shashankkhanna/">Shashank Khanna</a></p>
         </section>
         <section id="skills">
             <h2>Top Skills</h2>
