--- a/index.html
+++ b/index.html
@@ -168,6 +168,17 @@
                 and managed game entities. Incorporated features such as shooting arrows, avoiding obstacles, and tracking scores
                 and lives.</p>
             <div id="pygame-repl-container"></div>
+            <div class="container">
+            <!-- Project Results - Video -->
+            <section id="project-results" class="results-section">
+                <h2>Project Results</h2>
+                <video controls width="640" height="360" poster="project_video_poster.jpg">
+                    <source src="Screen Recording 2024-04-21 at 10.59.01 PM 2.mov" type="video/quicktime">
+                    Your browser does not support the video tag.
+                </video>
+                <p>Description of the project results showcased in the video.</p>
+            </section>
+            </div>
         </section>
         <!-- Add more sections if needed -->
     </div>
