--- a/index.html
+++ b/index.html
@@ -160,27 +160,16 @@
             <h3>Manipal Institute of Technology</h3>
             <p>BTech - Bachelor of Technology, Electrical, Electronics and Communications Engineering · (2014 - 2018)</p>
         </section>
-        <div class="container">
-        <!-- Pygame REPL container -->
-        <section id="pygame-repl">
-            <h2>Project - Shape Shooter Game</h2>
-            <p>Developed a Python-based arcade game utilizing Pygame library. Designed game mechanics, implemented player controls,
-                and managed game entities. Incorporated features such as shooting arrows, avoiding obstacles, and tracking scores
-                and lives.</p>
-            <div id="pygame-repl-container"></div>
-
-            <div class="container">
-            <!-- Project Results - Video -->
-            <section id="project-results" class="results-section">
-                <h2>Project Results</h2>
-                <video controls width="640" height="360" poster="project_video_poster.jpg">
-                    <source src="Screen Recording 2024-04-21 at 10.59.01 PM 2.mov" type="video/quicktime">
-                    Your browser does not support the video tag.
-                </video>
-                <p>Description of the project results showcased in the video.</p>
-            </section>
-            </div>
-        </section>
-        <!-- Add more sections if needed -->
+    </div>
+    <!-- Project Results - Video -->
+    <section id="project-results" class="results-section">
+        <h2>Project Results</h2>
+        <video controls width="640" height="360" poster="project_video_poster.jpg">
+            <source src="GameVideo.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <p>Description of the project results showcased in the video.</p>
+    </section>
+    <!-- Add more sections if needed -->
 </body>
 </html>
