--- a/index.html
+++ b/index.html
@@ -73,22 +73,16 @@
             border-radius: 10px;
             box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
         }
-                /* Video container styles */
+
+        /* Video container styles */
         #project-video {
             border-radius: 10px;
             box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
             overflow: hidden;
-        }
-
-        /* Center the video horizontally */
-        #project-video {
             display: block;
             margin: 0 auto;
-        }
-
-        /* Add some padding */
-        #project-video {
             padding: 20px;
+            width: 100%;
         }
     </style>
 </head>
