--- a/index.html
+++ b/index.html
@@ -174,6 +174,10 @@
     </div>
     <!-- Project Results - Video -->
     <section id="project-results" class="results-section">
+        <h2>Project - Shape Shooter Game</h2>
+            <p>Developed a Python-based arcade game utilizing Pygame library. Designed game mechanics, implemented player controls,
+                and managed game entities. Incorporated features such as shooting arrows, avoiding obstacles, and tracking scores
+                and lives.</p>
         <h2>Project Results</h2>
         <video id="project-video" autoplay loop muted controls width="100%" height="auto" poster="project_video_poster.jpg">
             <source src="project_results_video.mp4" type="video/mp4">
