--- a/index.html
+++ b/index.html
@@ -185,6 +185,39 @@
         </video>
         <p>Description of the project results showcased in the video.</p>
     </section>
+     <!-- Project Step 1 - Video -->
+    <section id="project-step-1" class="results-section">
+        <h2>Project Step 1</h2>
+        <div class="video-container">
+            <video id="project-step-1-video" autoplay loop muted controls width="100%" height="auto" poster="project_step_1_poster.jpg">
+                <source src="project_step_1_video.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+        <p>Description of the first step of the project.</p>
+    </section>
+    <!-- Project Step 2 - Video -->
+    <section id="project-step-2" class="results-section">
+        <h2>Project Step 2</h2>
+        <div class="video-container">
+            <video id="project-step-2-video" autoplay loop muted controls width="100%" height="auto" poster="project_step_2_poster.jpg">
+                <source src="project_step_2_video.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+        <p>Description of the second step of the project.</p>
+    </section>
+    <!-- Project Step 3 - Video -->
+    <section id="project-step-3" class="results-section">
+        <h2>Project Step 3</h2>
+        <div class="video-container">
+            <video id="project-step-3-video" autoplay loop muted controls width="100%" height="auto" poster="project_step_3_poster.jpg">
+                <source src="project_step_3_video.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+        <p>Description of the third step of the project.</p>
+    </section>
     <!-- Add more sections if needed -->
 </body>
 </html>
