--- a/index.html
+++ b/index.html
@@ -185,6 +185,19 @@
         </video>
         <p>Description of the project results showcased in the video.</p>
     </section>
+    <section id="project-results2" class="results-section">
+        <h2>Project - Video To Text AI Assisted</h2>
+            <p>The code 1st converts a video into audio file and then it converts the audio into 30 chunks which are
+                then converted to text individually using recognize_google then the chunks are sent to OpenAI "model="gpt-3.5-turbo-instruct"
+                which gives us the results.
+            </p>
+        <h3>Project Results</h3>
+        <video id="project-video2" autoplay loop muted controls width="100%" height="auto" poster="project_video_poster.jpg">
+            <source src="project_results_video2.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <p>Description of the project results showcased in the video.</p>
+    </section>
      <!-- Project Step 1 - Video -->
     <section id="project-step-1" class="results-section">
         <h2>Project Step 1</h2>
