--- a/index.html
+++ b/index.html
@@ -84,6 +84,50 @@
             padding: 20px;
             width: 100%;
         }
+        .video-container {
+            position: relative;
+            overflow: hidden;
+            border-radius: 10px;
+        }
+
+        .video-container video {
+            width: 100%;
+            height: auto;
+            transition: transform 0.5s ease-in-out;
+        }
+
+        .video-container .arrow {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            font-size: 24px;
+            color: rgba(255, 255, 255, 0.8);
+            cursor: pointer;
+            transition: color 0.3s, transform 0.3s;
+            z-index: 1;
+        }
+
+        .video-container .arrow:hover {
+            color: rgba(255, 255, 255, 1);
+            animation: bounce 0.5s ease infinite alternate;
+        }
+
+        @keyframes bounce {
+            0% {
+                transform: translateY(0);
+            }
+            100% {
+                transform: translateY(-5px);
+            }
+        }
+
+        .video-container .prev-arrow {
+            left: 10px;
+        }
+
+        .video-container .next-arrow {
+            right: 10px;
+        }
     </style>
 </head>
 <body>
@@ -192,44 +236,71 @@
                 which gives us the results.
             </p>
         <h3>Project Results</h3>
-        <video id="project-video2" autoplay loop muted controls width="100%" height="auto" poster="project_video_poster.jpg">
-            <source src="project_results_video2.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-        <p>Description of the project results showcased in the video.</p>
     </section>
-     <!-- Project Step 1 - Video -->
+    <!-- Project Step 1 - Video -->
     <section id="project-step-1" class="results-section">
         <h2>Project Step 1</h2>
         <div class="video-container">
-            <video id="project-step-1-video" autoplay loop muted controls width="100%" height="auto" poster="project_step_1_poster.jpg">
+            <video id="project-step-1-video" autoplay loop muted controls poster="project_step_1_poster.jpg">
                 <source src="project_step_1_video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
+            <div class="arrow prev-arrow" onclick="changeVideo('project-step-1', 'prev')">
+                <i class="fas fa-chevron-left"></i>
+            </div>
+            <div class="arrow next-arrow" onclick="changeVideo('project-step-1', 'next')">
+                <i class="fas fa-chevron-right"></i>
+            </div>
         </div>
-        <p>Description of the first step of the project.</p>
+        <!-- Description of the first step of the project -->
     </section>
     <!-- Project Step 2 - Video -->
     <section id="project-step-2" class="results-section">
         <h2>Project Step 2</h2>
         <div class="video-container">
-            <video id="project-step-2-video" autoplay loop muted controls width="100%" height="auto" poster="project_step_2_poster.jpg">
+            <video id="project-step-2-video" autoplay loop muted controls poster="project_step_2_poster.jpg">
                 <source src="project_step_2_video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
+            <div class="arrow prev-arrow" onclick="changeVideo('project-step-2', 'prev')">
+                <i class="fas fa-chevron-left"></i>
+            </div>
+            <div class="arrow next-arrow" onclick="changeVideo('project-step-2', 'next')">
+                <i class="fas fa-chevron-right"></i>
+            </div>
         </div>
-        <p>Description of the second step of the project.</p>
+        <!-- Description of the second step of the project -->
     </section>
     <!-- Project Step 3 - Video -->
     <section id="project-step-3" class="results-section">
         <h2>Project Step 3</h2>
         <div class="video-container">
-            <video id="project-step-3-video" autoplay loop muted controls width="100%" height="auto" poster="project_step_3_poster.jpg">
+            <video id="project-step-3-video" autoplay loop muted controls poster="project_step_3_poster.jpg">
                 <source src="project_step_3_video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
+            <div class="arrow prev-arrow" onclick="changeVideo('project-step-3', 'prev')">
+                <i class="fas fa-chevron-left"></i>
+            </div>
+            <div class="arrow next-arrow" onclick="changeVideo('project-step-3', 'next')">
+                <i class="fas fa-chevron-right"></i>
+            </div>
         </div>
-        <p>Description of the third step of the project.</p>
+        <!-- Description of the third step of the project -->
+    </section>
+    <!-- JavaScript for video navigation -->
+    <script>
+        function changeVideo(sectionId, direction) {
+            var video = document.getElementById(sectionId + '-video');
+            if (direction === 'prev') {
+                // Change to previous video source
+                // Example code: Change source of the video element based on direction
+            } else if (direction === 'next') {
+                // Change to next video source
+                // Example code: Change source of the video element based on direction
+            }
+        }
+    </script>
     </section>
     <!-- Add more sections if needed -->
 </body>
